crates/rspack_error/tests/fixtures/html_syntax_error/fixtures__html_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: html_syntax_error
---
  × HTML parsing error: Start tag seen without seeing a doctype first, expected "<!DOCTYPE html>"
   ╭─[1:1]
 1 │ <head>
   · ───┬──
   ·    ╰── Start tag seen without seeing a doctype first, expected "<!DOCTYPE html>"
 2 │   </something>
   ╰────
  × HTML parsing error: Stray end tag "something"
   ╭─[1:1]
 1 │ <head>
 2 │   </something>
   ·   ▲
   ·   ╰── Stray end tag "something"
   ╰────

